[package]
name = "error_feedback"
version = "0.1.0"
edition = "2021"
authors = ["Sven Ponelat"]
license = "MIT OR Apache-2.0"
description = "error feedback strings"
repository = "https://github.com/svencp/error_feedback.git"
categories = ["errors"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "2.0.1"


